; ModuleID = '/home/carl/AnghaBench/linux/fs/jffs2/extr_scan.c_rotate_list.c'
source_filename = "/home/carl/AnghaBench/linux/fs/jffs2/extr_scan.c_rotate_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_head = type { %struct.list_head* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_head*, i32)* @rotate_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rotate_list(%struct.list_head* %0, i32 %1) #0 {
  %3 = alloca %struct.list_head*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.list_head*, align 8
  store %struct.list_head* %0, %struct.list_head** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.list_head*, %struct.list_head** %3, align 8
  %7 = getelementptr inbounds %struct.list_head, %struct.list_head* %6, i32 0, i32 0
  %8 = load %struct.list_head*, %struct.list_head** %7, align 8
  store %struct.list_head* %8, %struct.list_head** %5, align 8
  %9 = load %struct.list_head*, %struct.list_head** %3, align 8
  %10 = call i32 @list_del(%struct.list_head* %9)
  br label %11

11:                                               ; preds = %15, %2
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %4, align 4
  %14 = icmp ne i32 %12, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = load %struct.list_head*, %struct.list_head** %5, align 8
  %17 = getelementptr inbounds %struct.list_head, %struct.list_head* %16, i32 0, i32 0
  %18 = load %struct.list_head*, %struct.list_head** %17, align 8
  store %struct.list_head* %18, %struct.list_head** %5, align 8
  br label %11

19:                                               ; preds = %11
  %20 = load %struct.list_head*, %struct.list_head** %3, align 8
  %21 = load %struct.list_head*, %struct.list_head** %5, align 8
  %22 = call i32 @list_add(%struct.list_head* %20, %struct.list_head* %21)
  ret void
}

declare dso_local i32 @list_del(%struct.list_head*) #1

declare dso_local i32 @list_add(%struct.list_head*, %struct.list_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
